; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_vm_unix.c_vslock.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_vm_unix.c_vslock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VM_PROT_READ = common dso_local global i32 0, align 4
@VM_PROT_WRITE = common dso_local global i32 0, align 4
@VM_KERN_MEMORY_BSD = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@EACCES = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vslock(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = call i32 (...) @current_map()
  store i32 %8, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  %10 = load i64, i64* %4, align 8
  %11 = load i32, i32* %7, align 4
  %12 = call i32 @vm_map_page_mask(i32 %11)
  %13 = call i32 @vm_map_trunc_page(i64 %10, i32 %12)
  %14 = load i64, i64* %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = add nsw i64 %14, %15
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @vm_map_page_mask(i32 %17)
  %19 = call i32 @vm_map_round_page(i64 %16, i32 %18)
  %20 = load i32, i32* @VM_PROT_READ, align 4
  %21 = load i32, i32* @VM_PROT_WRITE, align 4
  %22 = or i32 %20, %21
  %23 = load i32, i32* @VM_KERN_MEMORY_BSD, align 4
  %24 = load i32, i32* @FALSE, align 4
  %25 = call i32 @vm_map_wire_kernel(i32 %9, i32 %13, i32 %19, i32 %22, i32 %23, i32 %24)
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* %6, align 4
  switch i32 %26, label %32 [
    i32 128, label %27
    i32 131, label %28
    i32 130, label %28
    i32 129, label %30
  ]

27:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %34

28:                                               ; preds = %2, %2
  %29 = load i32, i32* @ENOMEM, align 4
  store i32 %29, i32* %3, align 4
  br label %34

30:                                               ; preds = %2
  %31 = load i32, i32* @EACCES, align 4
  store i32 %31, i32* %3, align 4
  br label %34

32:                                               ; preds = %2
  %33 = load i32, i32* @EINVAL, align 4
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %32, %30, %28, %27
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @current_map(...) #1

declare dso_local i32 @vm_map_wire_kernel(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @vm_map_trunc_page(i64, i32) #1

declare dso_local i32 @vm_map_page_mask(i32) #1

declare dso_local i32 @vm_map_round_page(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
